--- a/devel/onetbb/Makefile
+++ b/devel/onetbb/Makefile
@@ -1,6 +1,7 @@
 PORTNAME=	onetbb
-PORTVERSION=	2021.7.0
+PORTVERSION=	2022.1.0
 DISTVERSIONPREFIX=	v
+PORTREVISION=	1
 CATEGORIES=	devel
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -9,34 +10,39 @@ WWW=		https://software.intel.com/oneapi/onetbb
 
 LICENSE=	Apache-2.0
 
-LIB_DEPENDS=	libhwloc.so.15:devel/hwloc2
+LIB_DEPENDS=	libhwloc.so:devel/hwloc2
 
-USES=		cmake compiler:c++11-lang tar:tgz
+USES=		cmake compiler:c++11-lang localbase pathfix pkgconfig tar:tgz
+USE_GITHUB=	yes
+GH_ACCOUNT=	uxlfoundation
+GH_PROJECT=	oneTBB
+USE_LDCONFIG=	yes
 
-CMAKE_ARGS+=	-DTBB_STRICT:BOOL=FALSE \
-		-DCMAKE_INSTALL_DOCDIR:PATH="${DOCSDIR}" \
-		-DCMAKE_HWLOC_2_LIBRARY_PATH:PATH="${LOCALBASE}/lib/libhwloc.so" \
-		-DCMAKE_HWLOC_2_INCLUDE_PATH:PATH="${LOCALBASE}/include"
+CMAKE_ARGS+=	-DCMAKE_INSTALL_DOCDIR:PATH="${DOCSDIR}" \
+		-DTBB_STRICT:BOOL=FALSE
+
+# Many symbols in the linker version scripts are undefined because link time
+# optimization (-flto=thin) removes them. Suppress errors with lld >= 17 due to
+# these undefined symbols.
+LDFLAGS+=	-Wl,--undefined-version
 
 CONFLICTS=	tbb
 
-USE_GITHUB=	yes
-GH_ACCOUNT=	oneapi-src
-GH_PROJECT=	oneTBB
-
-USE_LDCONFIG=	yes
+# Pkgconfig: tbb.pc (on 64bit arch) vs tbb32.pc
+PLIST_SUB=	DBGSUFX="${DBGSUFX}" \
+		PCSUFX="${PCSUFX}"
 
 PORTDOCS=	README.md
 
 OPTIONS_DEFINE=	DOCS
 
-# Pkgconfig: tbb.pc (on 64bit arch) vs tbb32.pc
-PLIST_SUB=	PCSUFX="${PCSUFX}"
-
 .include <bsd.port.pre.mk>
 
-.if ${ARCH} == i386 || ${ARCH:Marmv?}
-PCSUFX=	32
+.if defined(WITH_DEBUG)
+DBGSUFX=	_debug
 .endif
 
+.if ${ARCH} == i386 || ${ARCH} == powerpc || ${ARCH:Marmv?}
+PCSUFX=		32
+.endif
 .include <bsd.port.post.mk>
