--- a/finance/Makefile
+++ b/finance/Makefile
@@ -1,6 +1,7 @@
     COMMENT = Monetary, financial and related applications
 
     SUBDIR += R-cran-lmtest
+    SUBDIR += R-cran-strucchange
     SUBDIR += expense
     SUBDIR += libofx
     SUBDIR += prestashop
