--- a/math/Makefile
+++ b/math/Makefile
@@ -13,11 +13,13 @@ SUBDIR += R-cran-haven
 SUBDIR += R-cran-isoband
 SUBDIR += R-cran-lazyeval
 SUBDIR += R-cran-maps
-SUBDIR += R-cran-mathjaxr
+SUBDIR += R-cran-mathjax
+SUBDIR += R-cran-sandwich
 SUBDIR += R-cran-sets
 SUBDIR += R-cran-sf
 SUBDIR += R-cran-sp
 SUBDIR += R-cran-units
+SUBDIR += R-cran-zoo
 SUBDIR += adol-c
 SUBDIR += analitza
 SUBDIR += asl
