textproc/py-tomlkit: magus

--- a/textproc/py-tomlkit/Makefile
+++ b/textproc/py-tomlkit/Makefile
@@ -14,12 +14,14 @@ LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}poetry-core>=1.0.0:devel/py-poetry-core@${PY_FLAVOR}
-TEST_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pyyaml>=0:devel/py-pyyaml@${PY_FLAVOR}
+#TEST_DEPENDS=	${PYTHON_PKGNAMEPREFIX}pyyaml>=0:devel/py-pyyaml@${PY_FLAVOR}
 
 USES=		python shebangfix
-USE_PYTHON=	autoplist concurrent pep517 pytest
+USE_PYTHON=	autoplist concurrent pep517
+#pytest
 
 NO_ARCH=	yes
+NO_TEST=	yes
 
 SHEBANG_FILES=	tests/toml-test/gen-multi.py
 
