--- a/devel/Makefile
+++ b/devel/Makefile
@@ -88,6 +88,7 @@ SUBDIR += R-cran-rlang
 SUBDIR += R-cran-roxygen2
 SUBDIR += R-cran-rprojroot
 SUBDIR += R-cran-rstudioapi
+SUBDIR += R-cran-sessioninfo
 SUBDIR += R-cran-sourcetools
 SUBDIR += R-cran-sparsevctrs
 SUBDIR += R-cran-sys
