--- a/dns/bind9-devel/Makefile
+++ b/dns/bind9-devel/Makefile
@@ -1,7 +1,7 @@
 # pkg-help formatted with fmt 59 63
 
 PORTNAME=	bind
-DISTVERSION=	9.21.7
+DISTVERSION=	9.21.8
 .if defined(BIND_TOOLS_SLAVE)
 # dns/bind-tools here
 PORTREVISION=	1
@@ -37,20 +37,21 @@ LICENSE_FILE=	${WRKSRC}/COPYRIGHT
 
 LIB_DEPENDS=	libuv.so:devel/libuv \
 		libnghttp2.so:www/libnghttp2 \
-		liburcu.so:sysutils/liburcu \
-		libxml2.so:textproc/libxml2
+		liburcu.so:sysutils/liburcu
 
 .if !defined(BIND_TOOLS_SLAVE)
 RUN_DEPENDS=	bind-tools>0:dns/bind-tools
 .endif
 
-USES=		autoreconf compiler:c11 cpe libedit libtool pkgconfig ssl tar:xz
+USES=		autoreconf compiler:c11 cpe gnome libedit libtool pkgconfig ssl tar:xz
 
 CPE_VENDOR=	isc
 CPE_VERSION=	${DISTVERSION:C/-.*//}
 .if ${DISTVERSION:M*-*}
 CPE_UPDATE=	${DISTVERSION:C/.*-//:tl}
 .endif
+
+USE_GNOME=	libxml2
 
 GNU_CONFIGURE=	yes
 GNU_CONFIGURE_MANPREFIX=	${PREFIX}/share
@@ -85,7 +86,7 @@ MAKE_JOBS_UNSAFE=	yes
 
 OPTIONS_DEFAULT=	GSSAPI_NONE IDN JSON LMDB \
 			TCP_FASTOPEN DNSTAP
-OPTIONS_DEFINE=		DNSTAP DOCS FIXED_RRSET GEOIP IDN JSON LARGE_FILE LMDB \
+OPTIONS_DEFINE=		DNSTAP DOCS GEOIP IDN JSON LARGE_FILE LMDB \
 			OVERRIDECACHE QUERYTRACE \
 			START_LATE TCP_FASTOPEN
 
@@ -101,7 +102,6 @@ OPTIONS_EXCLUDE=	DOCS GEOIP LMDB \
 OPTIONS_SUB=	yes
 
 DNSTAP_DESC=		Provides fast passive logging of DNS messages
-FIXED_RRSET_DESC=	Enable fixed rrset ordering
 GSSAPI_BASE_DESC=	Using Heimdal in base (nsupdate is broken)
 GSSAPI_HEIMDAL_DESC=	Using security/heimdal (nsupdate is broken)
 GSSAPI_MIT_DESC=	Using security/krb5
@@ -122,7 +122,6 @@ DNSTAP_CONFIGURE_ENABLE=	dnstap
 DNSTAP_LIB_DEPENDS=		libfstrm.so:devel/fstrm \
 				libprotobuf-c.so:devel/protobuf-c
 
-FIXED_RRSET_CONFIGURE_ENABLE=	fixed-rrset
 
 GEOIP_CONFIGURE_ENABLE=	geoip
 GEOIP_CONFIGURE_WITH=	maxminddb
