--- a/www/lighttpd/Makefile
+++ b/www/lighttpd/Makefile
@@ -18,7 +18,7 @@ GNU_CONFIGURE=	yes
 
 CONFIGURE_ARGS=	--libdir=${PREFIX}/lib/lighttpd
 
-TEST_TARGET=	check
+NO_TEST=	yes
 
 PORTDOCS=	AUTHORS COPYING INSTALL NEWS README
 
