multimedia/Makefile: fix typo

--- a/multimedia/Makefile
+++ b/multimedia/Makefile
@@ -65,7 +65,7 @@ SUBDIR += intel-media-sdk
 SUBDIR += jellyfin-media-player
 SUBDIR += kdemultimedia
 SUBDIR += kdemultimedia-ffmpegthumbs
-sUBDIR += kdenlive
+SUBDIR += kdenlive
 SUBDIR += kf5-kmediaplayer
 SUBDIR += l-smash
 SUBDIR += libaacs
