--- a/devel/Makefile
+++ b/devel/Makefile
@@ -69,6 +69,7 @@ SUBDIR += R-cran-parsedate
 SUBDIR += R-cran-patrick
 SUBDIR += R-cran-pillar
 SUBDIR += R-cran-pkgbuild
+SUBDIR += R-cran-pkgcache
 SUBDIR += R-cran-pkgconfig
 SUBDIR += R-cran-pkgload
 SUBDIR += R-cran-plogr
