--- a/net/liferea/Makefile
+++ b/net/liferea/Makefile
@@ -1,6 +1,5 @@
 PORTNAME=	liferea
-DISTVERSION=	1.14.5
-PORTREVISION=	1
+DISTVERSION=	1.14.6
 CATEGORIES=	net gnome
 MASTER_SITES=	https://github.com/lwindolf/liferea/releases/download/v${DISTVERSION}/
 
@@ -8,13 +7,16 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Simple RSS/RDF feed reader
 WWW=		https://lzone.de/liferea/
 
-LICENSE=	gpl2
+LICENSE=	gpl2 lgpl3
+LICENSE_COMB=	multi
+LICENSE_FILE_gpl2=	${WRKSRC}/COPYING
+LICENSE_FILE_lgpl3=	${WRKSRC}/COPYING.LIB
 
 BUILD_DEPENDS=	gsettings-desktop-schemas>=0:devel/gsettings-desktop-schemas
 LIB_DEPENDS=	libfribidi.so:converters/fribidi \
 		libharfbuzz.so:print/harfbuzz \
 		libsoup-2.4.so:devel/libsoup \
-		libwebkit2gtk-4.0.so:www/webkit2-gtk3 \
+		libwebkit2gtk-4.0.so:www/webkit2-gtk@40 \
 		libpeas-1.0.so:devel/libpeas \
 		libjson-glib-1.0.so:devel/json-glib
 RUN_DEPENDS=	gsettings-desktop-schemas>=0:devel/gsettings-desktop-schemas \
@@ -28,6 +30,8 @@ USE_GNOME=	cairo dconf:run gtk30 gdkpixbuf intltool introspection \
 
 GLIB_SCHEMAS=	net.sf.liferea.gschema.xml
 
+NO_TEST=	yes
+
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	--enable-introspection
 
@@ -38,6 +42,6 @@ MAKE_ENV+=	WEBKIT_DISABLE_COMPOSITING_MODE=1
 
 INSTALL_TARGET=	install-strip
 
-NO_TEST=	yes
+EXTRA_PATCHES=  ${FILESDIR}/extra-patch-libxml:-p1
 
 .include <bsd.port.mk>
