--- a/devel/Makefile
+++ b/devel/Makefile
@@ -52,6 +52,7 @@ SUBDIR += R-cran-googlesheets4
 SUBDIR += R-cran-gsubfn
 SUBDIR += R-cran-hms
 SUBDIR += R-cran-ids
+SUBDIR += R-cran-ini
 SUBDIR += R-cran-iterators
 SUBDIR += R-cran-later
 SUBDIR += R-cran-lifecycle
