--- a/devel/Makefile
+++ b/devel/Makefile
@@ -53,6 +53,7 @@ SUBDIR += R-cran-gsubfn
 SUBDIR += R-cran-hms
 SUBDIR += R-cran-ids
 SUBDIR += R-cran-ini
+SUBDIR += R-cran-interp
 SUBDIR += R-cran-iterators
 SUBDIR += R-cran-later
 SUBDIR += R-cran-lifecycle
