--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -7,17 +7,28 @@
     SUBDIR += R-cran-GDD
     SUBDIR += R-cran-RColorBrewer
     SUBDIR += R-cran-colorspace
+    SUBDIR += R-cran-diagram
+    SUBDIR += R-cran-dichromat
+    SUBDIR += R-cran-dygraphs
     SUBDIR += R-cran-farver
     SUBDIR += R-cran-ggplot2
+    SUBDIR += R-cran-ggrepel
     SUBDIR += R-cran-gridBase
     SUBDIR += R-cran-gridExtra
     SUBDIR += R-cran-jpeg
     SUBDIR += R-cran-latticeExtra
     SUBDIR += R-cran-magick
+    SUBDIR += R-cran-munsell
+    SUBDIR += R-cran-pROC
+    SUBDIR += R-cran-pdftools
     SUBDIR += R-cran-pixmap
     SUBDIR += R-cran-png
+    SUBDIR += R-cran-qcc
+    SUBDIR += R-cran-qpdf
     SUBDIR += R-cran-ragg
+    SUBDIR += R-cran-s2
     SUBDIR += R-cran-scales
+    SUBDIR += R-cran-shape
     SUBDIR += R-cran-viridis
     SUBDIR += R-cran-viridisLite
     SUBDIR += R-cran-visNetwork
@@ -277,6 +288,7 @@
     SUBDIR += php83-gd
     SUBDIR += pixd
     SUBDIR += pixen
+    SUBDIR += plasma6-spectacle
     SUBDIR += plotutils
     SUBDIR += png
     SUBDIR += podofo
