japanese/xpdf: ok

--- a/japanese/xpdf/Makefile
+++ b/japanese/xpdf/Makefile
@@ -38,8 +38,8 @@ do-install:
 	cd ${WRKSRC} && \
 	    ${INSTALL_DATA} ${INSTALL_FILES} ${DATADIR}/japanese
 	${MKDIR} ${STAGEDIR}${DATADIR}/japanese/CMap
-	cd ${DATADIR}/japanese/CMap && \
-	    ${FIND} ${FAKE_DESTDIR}${ADOBECMAPDIR}/aj16/CMap ${FAKE_DESTDIR}${ADOBECMAPDIR}/aj20/CMap \
-		-type f -exec ${LN} -s -f {} . \;
+#	cd ${DATADIR}/japanese/CMap && \
+#	    ${FIND} ${FAKE_DESTDIR}${ADOBECMAPDIR}/aj16/CMap ${FAKE_DESTDIR}${ADOBECMAPDIR}/aj20/CMap \
+#		-type f -exec ${LN} -s -f {} . \;
 
 .include <bsd.port.mk>
