--- a/x11/rofi/Makefile
+++ b/x11/rofi/Makefile
@@ -33,7 +33,7 @@ CONFLICTS_INSTALL?=	${PORTNAME}-wayland
 
 OPTIONS_DEFINE=	TEST
 
-#TEST_BUILD_DEPENDS=	checkmk:devel/check
+TEST_BUILD_DEPENDS=	checkmk:devel/check
 #TEST_MESON_ENABLED=	check
 NO_TEST=	yes
 
