--- a/net-mgmt/sysmon/Makefile
+++ b/net-mgmt/sysmon/Makefile
@@ -15,7 +15,7 @@ DOCS=		Changes.html binaries.html config.html docs.html index.html \
 MANPAGE=	sysmon.man.8 sysmon.conf.man.8
 
 GNU_CONFIGURE=	yes
-USES=	alias
+#USES=	alias
 OPTIONS_DEFINE=	DOCS
 
 do-install:
