devel/gamin: tweak on current

--- a/devel/gamin/Makefile
+++ b/devel/gamin/Makefile
@@ -1,5 +1,3 @@
-
-
 PORTNAME=	gamin
 PORTVERSION=	0.1.10
 PORTREVISION?=	335
@@ -8,6 +6,7 @@ MASTER_SITES=	http://people.gnome.org/~veillard/gamin/sources/
 
 MAINTAINER?=	ports@MidnightBSD.org
 COMMENT?=	File and directory monitoring system
+WWW=		http://people.gnome.org/~veillard/gamin/index.html
 
 LICENSE=	lgpl
 
@@ -21,7 +20,7 @@ CPPFLAGS+=	-DHAVE_LINUX -I${LOCALBASE}/include
 LIBS+=		-L${LOCALBASE}/lib
 INSTALL_TARGET=	install-strip
 
-CONFLICTS=	fam-[0-9]*
+CONFLICTS=	fam
 
 .if !defined(GAMIN_SLAVE)
 OPTIONS_DEFINE=	GAM_POLLER LIBINOTIFY RUN_AS_EUID
