--- a/misc/xfce4-weather-plugin/Makefile
+++ b/misc/xfce4-weather-plugin/Makefile
@@ -1,36 +1,35 @@
 PORTNAME=	xfce4-weather-plugin
-PORTVERSION=	0.11.0
-PORTREVISION=	1
+PORTVERSION=	0.12.0
 CATEGORIES=	misc xfce geography
 MASTER_SITES=	XFCE/panel-plugins
 DIST_SUBDIR=	xfce4
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	Xfce 4 weather module for xfce4-panel
+COMMENT=	Weather plugin for the Xfce panel
+WWW=		https://goodies.xfce.org/projects/panel-plugins/xfce4-weather-plugin
 
 LICENSE=	gpl2
+LICENSE_FILE=	${WRKSRC}/COPYING
 
-LIB_DEPENDS=	libsoup-2.4.so:devel/libsoup
+LIB_DEPENDS=	libjson-c.so:devel/json-c \
+		libsoup-2.4.so:devel/libsoup
 
-USES=		compiler:c11 gettext-tools gmake gnome libtool pkgconfig \
-		tar:bzip2 xfce
-USE_GNOME=	cairo glib20 gtk30 intltool libxml2
-USE_XFCE=	panel
+USES=		compiler:c11 gettext-tools gnome meson pkgconfig tar:xz xfce
+USE_GNOME=	glib20 gtk30 libxml2
 USE_LDCONFIG=	yes
-
-GNU_CONFIGURE=	yes
-INSTALL_TARGET=	install-strip
-CONFIGURE_TARGET=	${ARCH}-portbld-freebsd11.4
+USE_XFCE=	libmenu panel xfconf
 
 OPTIONS_DEFINE=	NLS UPOWER
 OPTIONS_SUB=	yes
 
 UPOWER_DESC=	Power management tasks
 
-NLS_CONFIGURE_ENABLE=	nls
-NLS_USES=		gettext-runtime
+NLS_USES=	gettext-runtime
 
 UPOWER_LIB_DEPENDS=	libupower-glib.so:sysutils/upower
-UPOWER_CONFIGURE_ENABLE=upower
+UPOWER_MESON_ENABLED=	upower-glib
+
+post-patch-NLS-off:
+	@${REINPLACE_CMD} -e "/^subdir('po')/d" ${WRKSRC}/meson.build
 
 .include <bsd.port.mk>
