--- a/sysutils/xfburn/Makefile
+++ b/sysutils/xfburn/Makefile
@@ -1,35 +1,36 @@
-# Created by: J.R. Oldroyd <fbsd@opal.com>
-
 PORTNAME=	xfburn
-PORTVERSION=	0.6.2
-PORTREVISION=	1
+PORTVERSION=	0.7.2
 CATEGORIES=	sysutils
 MASTER_SITES=	XFCE/apps
 DIST_SUBDIR=	xfce4
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	CD/DVD burning tool for Xfce
+WWW=		https://goodies.xfce.org/projects/applications/xfburn
 
 LICENSE=	gpl2
 
 LIB_DEPENDS=	libburn.so:devel/libburn \
-		libisofs.so:devel/libisofs
+		libisofs.so:devel/libisofs \
+		libharfbuzz.so:print/harfbuzz
 RUN_DEPENDS=	cdrdao:sysutils/cdrdao
 
 USES=		compiler:c11 desktop-file-utils gettext-tools gmake gnome \
 		pkgconfig tar:bzip2 xfce
-USE_GNOME=	cairo glib20 gtk30 intltool
+USE_GNOME=	cairo gdkpixbuf glib20 gtk30 intltool
 USE_XFCE=	libexo
 
 GNU_CONFIGURE=	yes
+GNU_CONFIGURE_MANPREFIX=${PREFIX}/share
 CONFIGURE_ARGS=	--disable-gudev
 
 OPTIONS_DEFINE=			GSTREAMER NLS
 OPTIONS_DEFAULT=		GSTREAMER
 OPTIONS_SUB=			yes
 
+GSTREAMER_USES=			gstreamer
 GSTREAMER_CONFIGURE_ENABLE=	gstreamer
-GSTREAMER_USE=			gstreamer1=yes,faac,flac,lame,vorbis,wavpack
+GSTREAMER_USE=			gstreamer=faac,flac,lame,vorbis,wavpack
 
 NLS_CONFIGURE_ENABLE=		nls
 NLS_USES=			gettext-runtime
