--- a/www/rubygem-rack-session10/Makefile
+++ b/www/rubygem-rack-session10/Makefile
@@ -11,7 +11,7 @@ WWW=		https://github.com/rack/rack-session
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/license.md
 
-RUN_DEPENDS=	rubygem-rack22>=2,3<3,3:www/rubygem-rack22
+RUN_DEPENDS=	rubygem-rack22>=2:www/rubygem-rack22
 
 USES=		gem
 
