www/dojo: fix plist

--- a/www/dojo/Makefile
+++ b/www/dojo/Makefile
@@ -10,34 +10,34 @@ WWW=		https://dojotoolkit.org/
 
 LICENSE=	bsd3
 
-USES=		cpe
-CPE_VENDOR=	linuxfoundation
+USES=			cpe
+CPE_VENDOR=		linuxfoundation
 
-NO_BUILD=	yes
-SHAREOWN=	www
-SHAREGRP=	www
+NO_ARCH=		yes
+NO_BUILD=		yes
+SHAREOWN=		www
+SHAREGRP=		www
 
 OPTIONS_DEFINE=		APACHE
 OPTIONS_SUB=		yes
 
+APACHE_USES=		apache:run cpe
+
 .include <bsd.mport.options.mk>
 
 .if ${PORT_OPTIONS:MAPACHE}
-USES+=			apache:run,2.4+ cpe
 CONFDIR=		${PREFIX}/${CONFDIR_REL}
 CONFDIR_REL=		${APACHEETCDIR}/Includes
 PLIST_SUB+=		CONFDIR=${CONFDIR_REL}
-
 CONF=			dojo.conf
 SUB_FILES+=		pkg-message ${CONF}
 .endif
 
 do-install:
-	@cd ${WRKSRC} && ${COPYTREE_SHARE} . ${STAGEDIR}${WWWDIR}
+	cd ${WRKSRC} && ${COPYTREE_SHARE} . ${WWWDIR}
 
-.if ${PORT_OPTIONS:MAPACHE}
-	@${MKDIR} ${STAGEDIR}${CONFDIR}
-	${CP} ${WRKDIR}/${CONF} ${STAGEDIR}${CONFDIR}/dojo.conf.sample
-.endif
+do-install-APACHE-on:
+	@${MKDIR} ${FAKE_DESTDIR}${CONFDIR}
+	${CP} ${WRKDIR}/${CONF} ${FAKE_DESTDIR}${CONFDIR}/dojo.conf.sample
 
 .include <bsd.port.mk>
