--- a/devel/llvm16/Makefile
+++ b/devel/llvm16/Makefile
@@ -304,6 +304,11 @@ USES+=		gnome
 .if ${PORT_OPTIONS:MCOMPILER_RT}
 LLVM_ENABLE_PROJECTS+=	compiler-rt
 COMPILER_RT_PATTERN=	(sanitizer|include.xray|include\/(fuzzer|orc)|profile\/InstrProfData.inc)
+# An unwind.h is require to build.  I think an in-tree one should be used
+# but this seems to work as a workaround...
+BUILD_DEPENDS+= libunwind>0:devel/libunwind
+# Allow unwind.h to be found reliably
+USES+=  localbase
 .endif
 
 .if ${PORT_OPTIONS:MEXTRAS}
