--- a/archivers/libarchive/Makefile
+++ b/archivers/libarchive/Makefile
@@ -18,7 +18,7 @@ LICENSE_FILE=	${WRKSRC}/COPYING
 
 LIB_DEPENDS=	libexpat.so:textproc/expat2
 
-USES=		cpe iconv libtool localbase:ldflags pathfix pkgconfig tar:xz
+USES=		cpe iconv libtool localbase:ldflags pathfix pkgconfig ssl tar:xz
 USE_LDCONFIG=	yes
 
 GNU_CONFIGURE=	yes
