--- a/math/Makefile
+++ b/math/Makefile
@@ -23,6 +23,7 @@
     SUBDIR += R-cran-sf
     SUBDIR += R-cran-sp
     SUBDIR += R-cran-units
+    SUBDIR += R-cran-xts
     SUBDIR += R-cran-zoo
     SUBDIR += adol-c
     SUBDIR += analitza
