--- a/graphics/libglvnd/Makefile
+++ b/graphics/libglvnd/Makefile
@@ -1,7 +1,7 @@
 PORTNAME=	libglvnd
-DISTVERSION=	1.6.0
-PORTREVISION=	2
+DISTVERSION=	1.7.0
 CATEGORIES=	graphics
+MASTER_SITES=	https://gitlab.freedesktop.org/glvnd/${PORTNAME}/uploads/c24806c283070dc70700234ca8ffacf8/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	GL Vendor-Neutral Dispatch library
@@ -12,11 +12,6 @@ LICENSE_COMB=	multi
 
 USES=		compiler:c++11-lib localbase meson pkgconfig
 USE_LDCONFIG=	yes
-
-USE_GITLAB=	yes
-GL_SITE=	https://gitlab.freedesktop.org
-GL_ACCOUNT=	glvnd
-GL_TAGNAME=	b05bbcdaeb9b700cf7877e6d66f8fc3ac952295b
 
 OPTIONS_DEFINE=	X11
 OPTIONS_DEFAULT=X11
@@ -29,12 +24,14 @@ X11_MESON_ENABLED=	x11 glx
 NO_TEST=	yes
 MESON_DISABLED=	tests
 
-MESON_ARGS+=	-Dasm=disabled
-
 .include <bsd.mport.options.mk>
 
-.if ${OSVERSION} < 300000
-USE_GCC=	yes
+.if ${ARCH} == powerpc || ${ARCH} == riscv64
+MESON_ARGS+=	-Dasm=disabled
+.endif
+
+.if ${ARCH} == powerpc
+MESON_ARGS+=	-Dtls=false
 .endif
 
 # Lots of software expects gl.pc even when it can build with EGL only
