--- a/lang/clover/Makefile
+++ b/lang/clover/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	clover
 PORTVERSION=	${MESAVERSION}
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES=	lang
 
 COMMENT=	Mesa OpenCL implementation for AMD GPUs
@@ -12,13 +12,15 @@ LICENSE_FILE=	${WRKSRC}/docs/license.rst
 BUILD_DEPENDS=	libclc>=0.3.0:devel/libclc \
 		opencl>=0:devel/opencl
 LIB_DEPENDS=	libOpenCL.so:devel/ocl-icd \
-		libLLVM-${LLVM_DEFAULT}.so:devel/llvm${LLVM_DEFAULT} \
+		libLLVM-${LLVM_VERSION}.so:devel/${LLVM_PORT:T} \
 		libzstd.so:archivers/zstd
-RUN_DEPENDS=	libclc>=0.3.0:devel/libclc \
+RUN_DEPENDS=	libclc-${LLVM_PORT:T}>0:devel/libclc@${LLVM_PORT:T} \
 		opencl>=0:devel/opencl
 
 ONLY_FOR_ARCHS=		i386 amd64
 ONLY_FOR_ARCHS_REASON=	Clover needs a GPU supported by the Radeon KMS driver
+
+USES=	llvm:lib,max=16
 
 .include <bsd.mport.options.mk>
 .include "${.CURDIR:H:H}/graphics/mesa-dri/Makefile.common"
@@ -48,16 +50,6 @@ MESON_ARGS+=	-Dplatforms="" \
 
 LDFLAGS_i386=		-Wl,-znotext
 
-# keep in sync with devel/libclc
-#LLVM_DEFAULT=   15
-
 .include "${MASTERDIR}/Makefile.targets"
-
-pre-patch:
-	@if [ -e ${LOCALBASE}/bin/llvm-config${LLVM_DEFAULT} ] && \
-		! [ -e ${LOCALBASE}/bin/clang${LLVM_DEFAULT} ]; then \
-		${ECHO_MSG} "Your llvm${LLVM_DEFAULT} is not built with clang support, which is required."; \
-		${FALSE}; \
-	fi
 
 .include <bsd.port.post.mk>
