--- a/devel/libgsf/Makefile
+++ b/devel/libgsf/Makefile
@@ -1,31 +1,35 @@
 PORTNAME=	libgsf
-PORTVERSION=	1.14.49
-PORTREVISION=	1
+DISTVERSION=	1.14.53
 CATEGORIES=	devel
 MASTER_SITES=	GNOME
-DIST_SUBDIR=	gnome2
+DIST_SUBDIR=	gnome
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT?=	Extensible i/o abstraction for dealing with structured file formats
+WWW=		https://gitlab.gnome.org/GNOME/libgsf/
 
-LICENSE=	gpl2 lgpl2.1
-LICENSE_COMB=	multi
-LICENSE_FILE_gpl2=	${WRKSRC}/COPYING
-LICENSE_FILE_lgpl2.1=	${WRKSRC}/COPYING.LIB
+LICENSE=	lgpl2.1
+LICENSE_FILE=	${WRKSRC}/COPYING
 
 USES=		cpe gmake gnome libtool localbase pathfix pkgconfig tar:xz
-USE_GNOME=	gdkpixbuf intlhack introspection:build libxml2
-GNU_CONFIGURE=	yes
-USE_LDCONFIG=	yes
-INSTALL_TARGET=	install-strip
-CONFIGURE_ARGS=	--enable-introspection
 CPE_VENDOR=	gnome
+USE_GNOME=	gdkpixbuf glib20 libxml2 introspection:build
+USE_LDCONFIG=	yes
+
+GNU_CONFIGURE=	yes
+
+CONFIGURE_ARGS=	--enable-introspection
+
+INSTALL_TARGET=	install-strip
+
+PLIST_SUB+=	LIBMINORVER=${DISTVERSION:E} \
+		LIBSHORTVER=${DISTVERSION:R:S/.//}
 
 OPTIONS_DEFINE=	NLS
 OPTIONS_DEFAULT=NLS
 OPTIONS_SUB=	yes
 
-NLS_CONFIGURE_ENABLE=	nls
 NLS_USES=		gettext
+NLS_CONFIGURE_ENABLE=	nls
 
 .include <bsd.port.mk>
