--- a/x11-toolkits/qt5-charts/Makefile
+++ b/x11-toolkits/qt5-charts/Makefile
@@ -12,4 +12,8 @@ USE_QT=		core declarative network gui widgets designer \
 		buildtools:build qmake:build
 USE_LDCONFIG=	${PREFIX}/${QT_LIBDIR_REL}
 
+post-install:
+	${REINPLACE_CMD} 's|/../../../../|/../../../|g' \
+		${PREFIX}/lib/cmake/Qt5*/Qt5*Config.cmake
+
 .include <bsd.port.mk>
