--- a/x11-toolkits/qt5-quick3d/Makefile
+++ b/x11-toolkits/qt5-quick3d/Makefile
@@ -17,4 +17,8 @@ USE_LDCONFIG=	${PREFIX}/${QT_LIBDIR_REL}
 
 QT_BINARIES=	yes
 
+post-install:
+	${REINPLACE_CMD} 's|/../../../../|/../../../|g' \
+		${PREFIX}/lib/cmake/Qt5*/Qt5*Config.cmake
+
 .include <bsd.port.mk>
