--- a/x11-toolkits/qt5-quickcontrols2/Makefile
+++ b/x11-toolkits/qt5-quickcontrols2/Makefile
@@ -16,4 +16,8 @@ USE_QT=		core declarative gui widgets \
 USE_LDCONFIG=	${PREFIX}/${QT_LIBDIR_REL}
 QT_DIST=	${PORTNAME}
 
+post-install:
+	${REINPLACE_CMD} 's|/../../../../|/../../../|g' \
+		${PREFIX}/lib/cmake/Qt5*/Qt5*Config.cmake
+
 .include <bsd.port.mk>
