--- a/x11-toolkits/qt5-datavis3d/Makefile
+++ b/x11-toolkits/qt5-datavis3d/Makefile
@@ -12,4 +12,8 @@ USE_LDCONFIG=	${PREFIX}/${QT_LIBDIR_REL}
 
 USES=		compiler:c++11-lang perl5 qmake qt-dist:5,datavis3d
 
+post-install:
+	${REINPLACE_CMD} 's|/../../../../|/../../../|g' \
+		${PREFIX}/lib/cmake/Qt5*/Qt5*Config.cmake
+
 .include <bsd.port.mk>
