--- a/x11-toolkits/qt5-gamepad/Makefile
+++ b/x11-toolkits/qt5-gamepad/Makefile
@@ -12,4 +12,8 @@ USES=		compiler:c++11-lang perl5 qmake:norecursive qt-dist:5,gamepad
 USE_PERL5=	build
 USE_QT=		core declarative gui buildtools:build
 
+post-install:
+	${REINPLACE_CMD} 's|/../../../../|/../../../|g' \
+		${PREFIX}/lib/cmake/Qt5*/Qt5*Config.cmake
+
 .include <bsd.port.mk>
