--- a/x11-toolkits/qt5-quickcontrols/Makefile
+++ b/x11-toolkits/qt5-quickcontrols/Makefile
@@ -14,4 +14,8 @@ USE_QT=		core declarative gui widgets \
 		buildtools:build
 USE_LDCONFIG=	${PREFIX}/${QT_LIBDIR_REL}
 
+post-install:
+	${REINPLACE_CMD} 's|/../../../../|/../../../|g' \
+		${PREFIX}/lib/cmake/Qt5*/Qt5*Config.cmake
+
 .include <bsd.port.mk>
