--- a/devel/kf5-kconfig/Makefile
+++ b/devel/kf5-kconfig/Makefile
@@ -5,8 +5,7 @@ CATEGORIES=	devel kde kde-frameworks
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	KF5 widgets for configuration dialogs
 
-# Sources say LGPL20+, KDE policy says LGPL21+, license file is LGPL21
-LICENSE=	LGPL21+
+LICENSE=	lgpl2.1+
 
 USES=		cmake compiler:c++11-lib cpe kde:5 qt:5 tar:xz
 CPE_VENDOR=	kde
