--- a/devel/kf5-kcmutils/Makefile
+++ b/devel/kf5-kcmutils/Makefile
@@ -5,6 +5,9 @@ CATEGORIES=	devel kde kde-frameworks
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	KF5 utilities for working with KCModules
 
+LICENSE=        bsd3 lgpl2.1+
+LICENSE_COMB=   multi
+
 USES=		cmake compiler:c++11-lib gettext kde:5 qt:5 tar:xz
 USE_KDE=	auth codecs config configwidgets coreaddons guiaddons i18n \
 		itemviews kdeclarative package service \
