--- a/devel/kf5-kcoreaddons/Makefile
+++ b/devel/kf5-kcoreaddons/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	devel kde kde-frameworks
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	KF5 addons to QtCore
 
-LICENSE=	LGPL21+ BSD3CLAUSE
+LICENSE=	lgpl2.1+ bsd3
 LICENSE_COMB=	multi
 
 USES=		cmake compiler:c++11-lib kde:5 qt:5 shared-mime-info tar:xz
