--- a/devel/kf5-kdbusaddons/Makefile
+++ b/devel/kf5-kdbusaddons/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	devel kde kde-frameworks
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	KF5 addons to QtDBus
 
-LICENSE=	LGPL21+
+LICENSE=	lgpl2.1+
 
 USES=		cmake compiler:c++11-lib kde:5 qt:5 tar:xz
 USE_KDE=	ecm:build
