--- a/devel/kf5-kauth/Makefile
+++ b/devel/kf5-kauth/Makefile
@@ -6,6 +6,9 @@ CATEGORIES=	devel kde kde-frameworks
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	KF5 abstraction to system policy and authentication features
 
+LICENSE=	bsd3 lgpl2.1+
+LICENSE_COMB=	multi
+
 LIB_DEPENDS=	libpolkit-qt5-core-1.so:sysutils/polkit-qt-1@qt5
 
 USES=		cmake compiler:c++11-lib cpe kde:5 qt:5 tar:xz
