--- a/devel/kf5-kcrash/Makefile
+++ b/devel/kf5-kcrash/Makefile
@@ -5,6 +5,9 @@ CATEGORIES=	devel kde kde-frameworks
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	KF5 library to handle crash analysis and bug report from apps
 
+LICENSE=	bsd3 lgpl2.1+
+LICENSE_COMB=	multi
+
 USES=		cmake compiler:c++11-lib kde:5 qt:5 tar:xz xorg
 USE_KDE=	coreaddons \
 		ecm:build
