--- a/devel/kf5-kitemmodels/Makefile
+++ b/devel/kf5-kitemmodels/Makefile
@@ -5,6 +5,8 @@ CATEGORIES=	devel kde kde-frameworks
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	KF5 models for Qt Model/View system
 
+LICENSE=	lgpl2.1+
+
 USES=		cmake compiler:c++11-lib kde:5 qt:5 tar:xz
 USE_KDE=	ecm:build
 USE_QT=		core declarative network \
