--- a/devel/kf5-knewstuff/Makefile
+++ b/devel/kf5-knewstuff/Makefile
@@ -5,6 +5,8 @@ CATEGORIES=	devel kde kde-frameworks
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	KF5 library for downloading application assets from the network
 
+LICENSE=	lgpl2.1+
+
 USES=		cmake compiler:c++11-lib gettext kde:5 qt:5 tar:xz xorg
 USE_KDE=	archive attica auth codecs completion config \
 		configwidgets coreaddons i18n iconthemes itemviews \
