--- a/devel/kf5-kparts/Makefile
+++ b/devel/kf5-kparts/Makefile
@@ -5,7 +5,9 @@ CATEGORIES=	devel kde kde-frameworks
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	KF5 document centric plugin system
 
-USES=		cmake compiler:c++11-lib gettext kde:5 qt:5 tar:xz xorg
+LICENSE=	lgpl2.1+
+
+USES=		cmake compiler:c++11-lib gettext kde:5 kfhack qt:5 tar:xz xorg
 USE_KDE=	auth codecs completion config configwidgets coreaddons \
 		i18n iconthemes jobwidgets kio service \
 		solid textwidgets widgetsaddons windowsystem xmlgui \
