--- a/devel/kf5-kpty/Makefile
+++ b/devel/kf5-kpty/Makefile
@@ -5,7 +5,9 @@ CATEGORIES=	devel kde kde-frameworks
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	KF5 pty abstraction
 
-USES=		cmake compiler:c++11-lib gettext kde:5 qt:5 tar:xz
+LICENSE=	lgpl2.1+
+
+USES=		cmake compiler:c++11-lib gettext kde:5 kfhack qt:5 tar:xz
 USE_KDE=	coreaddons i18n \
 		ecm:build
 USE_QT=		core \
