--- a/textproc/kf5-kcodecs/Makefile
+++ b/textproc/kf5-kcodecs/Makefile
@@ -7,7 +7,7 @@ COMMENT=	KF5 library for string manipulation
 
 LICENSE=	lgpl2.1
 
-USES=		cmake compiler:c++11-lib gperf kde:5 qt:5 tar:xz
+USES=		cmake compiler:c++11-lib gperf kde:5 kfhack qt:5 tar:xz
 USE_KDE=	ecm:build
 USE_QT=		core linguisttools \
 		buildtools:build qmake:build
