--- a/textproc/kf5-sonnet/Makefile
+++ b/textproc/kf5-sonnet/Makefile
@@ -5,10 +5,12 @@ CATEGORIES=	textproc kde kde-frameworks
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	KF5 plugin-based spell checking library
 
+LICENSE=	lgpl2.1+
+
 LIB_DEPENDS=	libaspell.so:textproc/aspell \
 		libhunspell-1.7.so:textproc/hunspell
 
-USES=		cmake compiler:c++11-lib kde:5 qt:5 tar:xz
+USES=		cmake compiler:c++11-lib kde:5 kfhack qt:5 tar:xz
 USE_KDE=	ecm:build
 USE_QT=		core declarative gui linguisttools network uiplugin widgets \
 		buildtools:build qmake:build testlib:build
