--- a/devel/kf5-kunitconversion/Makefile
+++ b/devel/kf5-kunitconversion/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	devel kde kde-frameworks
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	KF5 library for unit conversion
 
-USES=		cmake compiler:c++11-lib gettext kde:5 pkgconfig qt:5 tar:xz
+USES=		cmake compiler:c++11-lib gettext kde:5 kfhack pkgconfig qt:5 tar:xz
 USE_KDE=	i18n \
 		ecm:build
 USE_QT=		core network \
